[package]
name = "owo-skin-rs"
version = "1.0.1"
edition = "2024"
license = "MIT"
description = "A Rust library for controlling the OWO skin"
repository = "https://github.com/MrMineO5/owo-skin-rs"
readme = "README.md"
keywords = ["owo", "owo-games", "owo-skin", "library"]

[lib]
name = "owo_skin"
path = "src/lib.rs"

[dependencies]
